# groot-engine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  allocator.cpp  context.cpp  engine.cpp  linalg.cpp  materials.cpp  objects.cpp  parsers.cpp  renderer.cpp  settings.cpp  transform.cpp  vertex.cpp  vkcontext.cpp
src/include/: allocator.hpp  context.hpp  engine.hpp  linalg.hpp  materials.hpp  objects.hpp  parsers.hpp  renderer.hpp  settings.hpp  transform.hpp  vertex.hpp  vkcontext.hpp
tests/: CMakeLists.txt  main.cpp  u_engine.cpp  u_linalg.cpp  u_materials.cpp  u_objects.cpp  u_parsers.cpp  utility.hpp
tests/shaders/: shader.frag  shader.vert
